# robot_paper_sim

./: .gitignore  README.md
src/fdilink_ahrs/: wheeltec_udev.sh
src/fdilink_ahrs/launch/: ahrs_data.launch
src/fdilink_ahrs/src/: ahrs_driver.cpp
src/joy_control_Twip_api/: CMakeLists.txt  package.xml
src/joy_control_Twip_api/launch/: Twip_joy.launch  test_ball_speed.launch
src/joy_control_Twip_api/src/: Twip_joy_move.cpp  Twip_joy_mult.cpp  acc_speed_filtered.cpp  gazebo_joy_control.cpp  joy_jump_control.cpp  speed_measure_filtered.cpp  target_joy_move.cpp
src/multi_msgs/: CMakeLists.txt  package.xml
src/multi_msgs/msg/: a1_motor_Cmd.msg  ak80_info.msg  multi_info.msg  target_info.msg
src/my_gazebo_controller/: CMakeLists.txt  package.xml
src/my_gazebo_controller/include/my_gazebo_controller/: gazebo_jump_controller.cc  gazebo_jump_controller.h
src/my_gazebo_controller/src/: gazebo_jump_node.cpp
src/my_lqr_controller/: CMakeLists.txt  package.xml
src/my_lqr_controller/include/my_lqr_controller/: leg_kinematics.h  lqr_control.h  motor_lqr_control.h
src/my_lqr_controller/src/: gazebo_jump_controller.cpp  gazebo_leg_controller.cpp  gazebo_roll_control.cpp  gazebo_set_state.cpp  gazebo_vmc_controller.cpp  leg_kinematics.cpp  lqr_control.cpp  lqr_gazebo_controller.cpp  motor_lqr_control.cpp  test_leg_kinematics.cpp  test_motor_lqr_standup.cpp  use_head.cpp
src/my_wheel_controller/: CMakeLists.txt  package.xml
src/my_wheel_controller/config/: params.yaml
src/my_wheel_controller/include/my_wheel_controller/: controller.h  lqr_control.h
src/my_wheel_controller/launch/: get_param.launch
src/my_wheel_controller/scripts/: listen.py  multi_receive.py  sub1.py  sub2.py
src/my_wheel_controller/src/: controller.cpp  lqr_control.cpp  motor_lqr_control.cpp  motor_multi_info_sub_and_publish.cpp  pid_control.cpp  test_a1_cmd_info.cpp  test_command.cpp  test_motor_a1.cpp  test_multi_info.cpp  test_multi_info_subscriber.cpp  wheel_standupcontrol.cpp
src/whell_control/: CMakeLists.txt  package.xml
src/whell_control/config/: robot_control.yaml
src/whell_control/launch/: wheel_control.launch
src/whell_describe/: CMakeLists.txt  package.xml
src/whell_describe/config/: joint_names_QZL-0000 球足轮机器人.yaml
src/whell_describe/launch/: display.launch  display_urdf.launch
src/whell_describe/meshes/: hightower.STL  obstacle.STL  surfacepath.STL  theslope.STL
src/whell_describe/rviz/: urdf.rviz
src/whell_describe/urdf/: hightower.urdf  obstacle.urdf  obstacle.xacro  surfacepath.urdf  theslope.urdf  whell_describe.urdf  whell_describe.xacro  whell_describe1.urdf  whell_describe2.urdf
src/whell_describe/worlds/: ball2.world
src/whell_describe/xacro/: diffwheel.xacro  gazebo.xacro  whell_describe.xacro
src/whell_gazebo/: CMakeLists.txt  package.xml
src/whell_gazebo/launch/: gazebo.launch
